Edit part functionality

--- a/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Shared/_Layout.cshtml
+++ b/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
                         </ul>
                     </li>
                     <li><a href="/cars">Cars</a></li>
+                    <li><a href="/parts/all">Parts</a></li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" type="button" data-toggle="dropdown">
                             Suppliers
