--- a/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Cars/All.cshtml
+++ b/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Cars/All.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "All";
 }
 
-<h2>Index</h2>
+<h2>All cars</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add New Car", "Add")
 </p>
 <table class="table">
     <tr>
