Add Users - registered,logged in and logged out, Add Sales - with confirmation

--- a/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Sales/Detail.cshtml
+++ b/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Sales/Detail.cshtml
@@ -1,5 +1,5 @@
 ﻿@using CarDealer.Models.ViewModels;
-@model SaleVm
+@model CarDealer.Models.ViewModels.Sales.SaleVm
 
 @{
     ViewBag.Title = "Detail";
