--- a/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Shared/_Layout.cshtml
+++ b/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using AuthenticationManager = CarDealerApp.Security.AuthenticationManager
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -20,36 +21,49 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>
-                        <a href="/customers/all/ascending">Customers</a>
-                    </li>
-                    <li>
-                        <a href="/parts/all">Customers</a>
-                    </li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" type="button" data-toggle="dropdown">
-                            Sale
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/sales">All</a></li>
-                            <li><a href="/sales/discounted">Discounted</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="/cars">Cars</a></li>
-                    <li><a href="/parts/all">Parts</a></li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" type="button" data-toggle="dropdown">
-                            Suppliers
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/suppliers/local">Local</a></li>
-                            <li><a href="/suppliers/importers">Importers</a></li>
-                            <li><a href="/suppliers/all">All</a></li>
-                        </ul>
-                    </li>
+                    @if (this.Request.Cookies.Get("sessionId") != null && AuthenticationManager.IsAuthenticated(this.Request.Cookies.Get("sessionId").Value))
+                    {
+                        <li>
+                            <a href="/customers/all/ascending">Customers</a>
+                        </li>
+
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" type="button" data-toggle="dropdown">
+                                Sale
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/sales">All</a></li>
+                                <li><a href="/sales/discounted">Discounted</a></li>
+                                <li><a href="/sales/add">Add</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="/cars">Cars</a></li>
+                        <li><a href="/parts/all">Parts</a></li>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" type="button" data-toggle="dropdown">
+                                Suppliers
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/suppliers/local">Local</a></li>
+                                <li><a href="/suppliers/importers">Importers</a></li>
+                                <li><a href="/suppliers/all">All</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <form method="post" action="/users/logout/">
+                                <input type="submit" value="Logout" class="form-control btn btn-left" />
+                            </form>
+                        </li>
+                    }
+                    else
+                    {
+                        <li><a href="/users/Login">Login</a></li>
+                        <li><a href="/users/Register">Register</a></li>
+                    }
                 </ul>
+
             </div>
         </div>
     </div>
