Add and delete suppliers

--- a/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Shared/_Layout.cshtml
+++ b/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Shared/_Layout.cshtml
@@ -49,6 +49,7 @@
                                 <li><a href="/suppliers/local">Local</a></li>
                                 <li><a href="/suppliers/importers">Importers</a></li>
                                 <li><a href="/suppliers/all">All</a></li>
+                                <li><a href="/suppliers/add">Add</a></li>
                             </ul>
                         </li>
                         <li>
