--- a/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Suppliers/All.cshtml
+++ b/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Suppliers/All.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<CarDealer.Models.ViewModels.SupplierVm>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Suppliers";
 }
 
-<h2>Index</h2>
+<h2>Suppliers</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("New supplier", "Add")
 </p>
 <table class="table">
     <tr>
