--- a/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Suppliers/Edit.cshtml
+++ b/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Suppliers/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CarDealer.Models.EntityModels.Supplier
+﻿@model CarDealer.Models.ViewModels.Supplier.EditSupplierVm
 
 @{
     ViewBag.Title = "Edit";
@@ -44,7 +44,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to suppliers", "All")
 </div>
 
 @section Scripts {
