--- a/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Shared/_Layout.cshtml
+++ b/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="/suppliers/local">Local</a></li>
                                 <li><a href="/suppliers/importers">Importers</a></li>
-                                <li><a href="/suppliers/all">All</a></li>
+                                <li><a href="/suppliers">All</a></li>
                                 <li><a href="/suppliers/add">Add</a></li>
                             </ul>
                         </li>
