--- a/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Shared/_Layout.cshtml
+++ b/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/Views/Shared/_Layout.cshtml
@@ -53,6 +53,9 @@
                             </ul>
                         </li>
                         <li>
+                            <a href="/logs/all">Logs</a>
+                        </li>
+                        <li>
                             <form method="post" action="/users/logout/">
                                 <input type="submit" value="Logout" class="form-control btn btn-left" />
                             </form>
