--- a/EventsApp/EventsApp/Views/Home/Index.cshtml
+++ b/EventsApp/EventsApp/Views/Home/Index.cshtml
@@ -2,8 +2,109 @@
 @{
     ViewBag.Title = "Home Page";
 }
+<body class="home blog header-full-width full-width-content">
 
-<div class="jumbotron">
+    <div class="wrap">
+        <div id="content-sidebar-wrap">
+
+            <div id="content" class="hfeed">
+                <div class="post-5 post type-post status-publish format-standard hentry category-featured category-parent-category-i entry feature feature">
+                    <a href="#" title="Welcome to Bigg"><img width="660" height="370" src="http://kingofwallpapers.com/event/event-008.jpg" class="alignleft post-image" alt="1" /></a>
+
+                    <h2 class="entry-title"><a href="#" title="Welcome to Bigg" rel="bookmark">All EVENTS <br />in One PLACE</a></h2>
+
+                    <div class="entry-content ">
+                        <p>Платформата "EVENTS ALL in One" предоставя възможност да споделяте, търсите или заявявате участие в най-актуалните събития в България! </p>
+                        <a class="bigg-read-more" href="#">Read Article</a>
+                    </div><!-- end .entry-content -->
+
+                </div><!-- end .postclass -->
+                <div class="post-1 post type-post status-publish format-standard hentry category-featured category-uncategorized entry fourcol first one-third teaser first">
+                    <a href="#" title="Hello world!"><img width="300" height="168" src="g" class="alignleft post-image" alt="2" /></a>		<h2 class="entry-title"><a href="#" title="Hello world!" rel="bookmark">Hello world!</a></h2>
+
+                    <div class="entry-content">
+                        <p>Bacon ipsum dolor sit amet kielbasa swine pariatur consequat consectetur esse tongue ea biltong. Fatback dolore ullamco labore in spare ribs ad hamburger cupidatat tongue. Nisi frankfurter duis proident, officia ham aliqua.</p>
+                        <a class="bigg-read-more" href="#">Read Article</a>
+                    </div><!-- end .entry-content -->
+
+                </div><!-- end .postclass -->
+                <div class="post-63 post type-post status-publish format-standard hentry category-child-category-i category-featured category-parent-category-i category-parent-category-ii tag-tag2 tag-tag5 tag-tag6 entry fourcol one-third teaser">
+                    <a href="#" title="Another Post with Everything"><img width="300" height="168" src="g" class="alignleft post-image" alt="3" /></a>		<h2 class="entry-title"><a href="#" title="Another Post with Everything In It" rel="bookmark">Another Post with Everything</a></h2>
+
+                    <div class="entry-content">
+                        <p>Bacon ipsum dolor sit amet kielbasa swine pariatur consequat consectetur esse tongue ea biltong. Fatback dolore ullamco labore in spare ribs ad hamburger cupidatat tongue. Nisi frankfurter duis proident, officia ham aliqua.</p>
+                        <a class="bigg-read-more" href="http://demo.opendesigns.org/another-post-with-everything-in-it/">Read Article</a>
+                    </div><!-- end .entry-content -->
+
+                </div><!-- end .postclass -->
+                <div class="post-61 post type-post status-publish format-standard hentry category-featured category-uncategorized entry fourcol one-third teaser">
+                    <a href="#" title="An Ordered List Post"><img width="300" height="168" src="g" class="alignleft post-image" alt="4" /></a>		<h2 class="entry-title"><a href="#" title="An Ordered List Post" rel="bookmark">An Ordered List Post</a></h2>
+
+                    <div class="entry-content">
+                        <p>Bacon ipsum dolor sit amet kielbasa swine pariatur consequat consectetur esse tongue ea biltong. Fatback dolore ullamco labore in spare ribs ad hamburger cupidatat tongue. Nisi frankfurter duis proident, officia ham aliqua.</p>
+                        <a class="bigg-read-more" href="#">Read Article</a>
+                    </div><!-- end .entry-content -->
+
+                </div><!-- end .postclass -->
+                <div class="post-56 post type-post status-publish format-standard hentry category-child-category-iii category-featured category-parent-category-iii tag-tag1 tag-tag3 tag-tag6 entry fourcol first last one-third teaser first">
+                    <a href="#" title="A Simple Text Post"><img width="300" height="168" src="g" class="alignleft post-image" alt="5" /></a>		<h2 class="entry-title"><a href="#" title="A Simple Text Post" rel="bookmark">A Simple Text Post</a></h2>
+
+                    <div class="entry-content">
+                        <p>Bacon ipsum dolor sit amet kielbasa swine pariatur consequat consectetur esse tongue ea biltong. Fatback dolore ullamco labore in spare ribs ad hamburger cupidatat tongue. Nisi frankfurter duis proident, officia ham aliqua.</p>
+                        <a class="bigg-read-more" href="#">Read Article</a>
+                    </div><!-- end .entry-content -->
+
+                </div><!-- end .postclass -->
+                <div class="post-53 post type-post status-publish format-standard hentry category-featured category-uncategorized entry fourcol one-third teaser">
+                    <a href="#" title="Hello world!"><img width="300" height="168" src="g" class="alignleft post-image" alt="6" /></a>		<h2 class="entry-title"><a href="#" title="Hello world!" rel="bookmark">Hello world!</a></h2>
+
+                    <div class="entry-content">
+                        <p>Bacon ipsum dolor sit amet kielbasa swine pariatur consequat consectetur esse tongue ea biltong. Fatback dolore ullamco labore in spare ribs ad hamburger cupidatat tongue. Nisi frankfurter duis proident, officia ham aliqua.</p>
+                        <a class="bigg-read-more" href="#">Read Article</a>
+                    </div><!-- end .entry-content -->
+
+                </div><!-- end .postclass -->
+                <div class="post-51 post type-post status-publish format-standard hentry category-child-category-ii category-featured category-grandchild-category-i category-parent-category-i category-parent-category-ii tag-tag1 tag-tag2 tag-tag5 tag-tag7 entry fourcol one-third teaser">
+                    <a href="#" title="A Post With Everything In It"><img width="300" height="168" src="images/7-300x168.jpg" class="alignleft post-image" alt="7" /></a>		<h2 class="entry-title"><a href="#" title="A Post With Everything In It" rel="bookmark">A Post With Everything In It</a></h2>
+
+                    <div class="entry-content">
+                        <p>Bacon ipsum dolor sit amet kielbasa swine pariatur consequat consectetur esse tongue ea biltong. Fatback dolore ullamco labore in spare ribs ad hamburger cupidatat tongue. Nisi frankfurter duis proident, officia ham aliqua.</p>
+                        <a class="bigg-read-more" href="#">Read Article</a>
+                    </div><!-- end .entry-content -->
+
+                </div><!-- end .postclass -->
+                <div class="post-49 post type-post status-publish format-standard hentry category-featured category-uncategorized tag-tag2 tag-tag5 tag-tag7 entry fourcol first one-third teaser first">
+                    <a href="#" title="Quotes Time!"><img width="300" height="168" src="images/8-300x168.jpg" class="alignleft post-image" alt="8" /></a>		<h2 class="entry-title"><a href="#" title="Quotes Time!" rel="bookmark">Quotes Time!</a></h2>
+
+                    <div class="entry-content">
+                        <p>Bacon ipsum dolor sit amet kielbasa swine pariatur consequat consectetur esse tongue ea biltong. Fatback dolore ullamco labore in spare ribs ad hamburger cupidatat tongue. Nisi frankfurter duis proident, officia ham aliqua.</p>
+                        <a class="bigg-read-more" href="#">Read Article</a>
+                    </div><!-- end .entry-content -->
+
+                </div><!-- end .postclass -->
+                <div class="post-47 post type-post status-publish format-standard hentry category-featured category-parent-category-ii category-parent-category-iii tag-tag2 tag-tag4 tag-tag7 entry fourcol one-third teaser">
+                    <a href="#" title="Left-Aligned Image"><img width="300" height="168" src="images/9-300x168.jpg" class="alignleft post-image" alt="9" /></a>		<h2 class="entry-title"><a href="#" title="A Post With a Left-Aligned Image" rel="bookmark">Left-Aligned Image</a></h2>
+
+                    <div class="entry-content">
+                        <p>Bacon ipsum dolor sit amet kielbasa swine pariatur consequat consectetur esse tongue ea biltong. Fatback dolore ullamco labore in spare ribs ad hamburger cupidatat tongue. Nisi frankfurter duis proident, officia ham aliqua.</p>
+                        <a class="bigg-read-more" href="#">Read Article</a>
+                    </div><!-- end .entry-content -->
+
+                </div><!-- end .postclass -->
+                <div class="post-45 post type-post status-publish format-standard hentry category-child-category-ii category-featured category-grandchild-category-i category-parent-category-i entry fourcol one-third teaser">
+                    <a href="#" title="Another Text-Only Post"><img width="300" height="168" src="images/10-300x168.jpg" class="alignleft post-image" alt="10" /></a>		<h2 class="entry-title"><a href="#" title="Another Text-Only Post" rel="bookmark">Another Text-Only Post</a></h2>
+
+                    <div class="entry-content">
+                        <p>Bacon ipsum dolor sit amet kielbasa swine pariatur consequat consectetur esse tongue ea biltong. Fatback dolore ullamco labore in spare ribs ad hamburger cupidatat tongue. Nisi frankfurter duis proident, officia ham aliqua.</p>
+                        <a class="bigg-read-more" href="#">Read Article</a>
+                    </div><!-- end .entry-content -->
+
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+@*<div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
@@ -21,4 +122,4 @@
         <h2>This is custiom helper made with class HtmlExtentions</h2>
         NOTHING
     </div>
-</div>
+</div>*@
