--- a/EventsApp/EventsApp/Views/Shared/_Layout.cshtml
+++ b/EventsApp/EventsApp/Views/Shared/_Layout.cshtml
@@ -22,21 +22,24 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Events", "Events", "Home")</li>
+                    <li>@Html.ActionLink("Events", "All", "Events")</li>
+                    <li>@Html.ActionLink("Add event", "Create", "Events")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
+
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - EVENTS all in ONE</p>
-           </footer>
-    </div>
+<div class="container body-content">
+    <div style="height: 60px"></div>
+    @RenderBody()
+    <hr/>
+    <footer>
+        <p>&copy; @DateTime.Now.Year - EVENTS all in ONE</p>
+    </footer>
+</div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
