Refactoring  Data layer, Add Roles - Admin, Editor, Visitor

--- a/EventsApp/EventsApp/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/EventsApp/EventsApp/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model EventsApp.Models.ExternalLoginConfirmationViewModel
+﻿@model EventsApp.Models.ViewModels.Account.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
