--- a/EventsApp/EventsApp/Views/Account/Login.cshtml
+++ b/EventsApp/EventsApp/Views/Account/Login.cshtml
@@ -1,5 +1,4 @@
-﻿@using EventsApp.Models
-@model LoginViewModel
+﻿@model EventsApp.Models.ViewModels.Account.LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
