--- a/EventsApp/EventsApp/Views/Account/Register.cshtml
+++ b/EventsApp/EventsApp/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model EventsApp.Models.RegisterViewModel
+﻿@model EventsApp.Models.ViewModels.Account.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
