--- a/EventsApp/EventsApp/Views/Account/ResetPassword.cshtml
+++ b/EventsApp/EventsApp/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model EventsApp.Models.ResetPasswordViewModel
+﻿@model EventsApp.Models.ViewModels.Account.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
