--- a/EventsApp/EventsApp/Views/Account/VerifyCode.cshtml
+++ b/EventsApp/EventsApp/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model EventsApp.Models.VerifyCodeViewModel
+﻿@model EventsApp.Models.ViewModels.Account.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
