--- a/EventsApp/EventsApp/Views/Manage/AddPhoneNumber.cshtml
+++ b/EventsApp/EventsApp/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model EventsApp.Models.AddPhoneNumberViewModel
+﻿@model EventsApp.Models.ViewModels.Manage.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
