--- a/EventsApp/EventsApp/Views/Manage/Index.cshtml
+++ b/EventsApp/EventsApp/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model EventsApp.Models.IndexViewModel
+﻿@model EventsApp.Models.ViewModels.Manage.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
