--- a/EventsApp/EventsApp/Views/Manage/SetPassword.cshtml
+++ b/EventsApp/EventsApp/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model EventsApp.Models.SetPasswordViewModel
+﻿@model EventsApp.Models.ViewModels.Manage.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
