--- a/EventsApp/EventsApp/Views/Account/ForgotPassword.cshtml
+++ b/EventsApp/EventsApp/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model EventsApp.Models.ForgotPasswordViewModel
+﻿@model EventsApp.Models.ViewModels.Account.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
