--- a/EventsApp/EventsApp/Views/Account/SendCode.cshtml
+++ b/EventsApp/EventsApp/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model EventsApp.Models.SendCodeViewModel
+﻿@model EventsApp.Models.ViewModels.Account.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
