--- a/EventsApp/EventsApp/Views/Manage/ChangePassword.cshtml
+++ b/EventsApp/EventsApp/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model EventsApp.Models.ChangePasswordViewModel
+﻿@model EventsApp.Models.ViewModels.Manage.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
