--- a/EventsApp/EventsApp/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/EventsApp/EventsApp/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model EventsApp.Models.VerifyPhoneNumberViewModel
+﻿@model EventsApp.Models.ViewModels.Manage.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
