Custom Unauthorized attribute, fix Add event binding model and Create.cshtml

--- a/EventsApp/EventsApp/Views/Account/Login.cshtml
+++ b/EventsApp/EventsApp/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@model EventsApp.Models.ViewModels.Account.LoginViewModel
+﻿@using EventsApp.Models.ViewModels.Account
+@model EventsApp.Models.ViewModels.Account.LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
