--- a/EventsApp/EventsApp/Views/Manage/ManageLogins.cshtml
+++ b/EventsApp/EventsApp/Views/Manage/ManageLogins.cshtml
@@ -1,5 +1,5 @@
-﻿@model EventsApp.Models.ViewModels.Manage.ManageLoginsViewModel
-@using Microsoft.Owin.Security
+﻿@using Microsoft.Owin.Security
+@model EventsApp.Models.ViewModels.Manage.ManageLoginsViewModel
 @{
     ViewBag.Title = "Manage your external logins";
 }
