--- a/EventsApp/EventsApp/Views/Account/Register.cshtml
+++ b/EventsApp/EventsApp/Views/Account/Register.cshtml
@@ -31,7 +31,7 @@
     </div>
     <div class="form-group">
         I am not only visitor.I will create an events
-        @Html.CheckBox("Editor", false)
+        @Html.CheckBox("Promoter", false)
     </div>
     
     <div class="form-group">    
