--- a/EventsApp/EventsApp/Views/Shared/_LoginPartial.cshtml
+++ b/EventsApp/EventsApp/Views/Shared/_LoginPartial.cshtml
@@ -7,8 +7,13 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new {title = "Manage"})
         </li>
+
+@if (User.IsInRole("Administrator")|| User.IsInRole("Promoter"))
+{
+        <li>@Html.ActionLink("Edit profile", "MyEvent", "Events")</li>
+}
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
     }
