Fix loyaout with authorization cases

--- a/EventsApp/EventsApp/Views/Home/Index.cshtml
+++ b/EventsApp/EventsApp/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<EventsApp.Models.ViewModels.Event.EventBriefVm>
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "ALL in ONE";
 }
 <body class="home blog header-full-width full-width-content">
     <div class="container">
@@ -11,11 +11,11 @@
                 <div class="post-5 post type-post status-publish format-standard hentry category-featured category-parent-category-i entry feature feature">
                     <a href="#" title="Welcome to Event portal"><img width="660" height="370" src="http://kingofwallpapers.com/event/event-008.jpg" class="alignleft" alt="Event portal"/></a>
 
-                    <h2 class="entry-title"><a href="#" title="Welcome to Bigg" rel="bookmark">All EVENTS <br/>in One PLACE</a>
+                    <h2 class="entry-title"><a href="#" title="Welcome to Bigg" rel="bookmark">All EVENTS <br/>in ONE PLACE</a>
                     </h2>
 
                     <div class="entry-content ">
-                        <p>Платформата "EVENTS ALL in One" предоставя възможност да споделяте, търсите или заявявате участие в най-актуалните събития в България! </p>
+                        <p>Платформата за събития "ALL in ONE"  предоставя възможност да споделяте, търсите или заявявате участие в най-актуалните събития в България! </p>
                         @Html.ActionLink("More about us", "About", "Home", null, new { @class = "bigg-read-more" })
                     </div><!-- end .entry-content -->
                 </div><!-- end .postclass -->
