--- a/EventsApp/EventsApp/Views/Shared/_Layout.cshtml
+++ b/EventsApp/EventsApp/Views/Shared/_Layout.cshtml
@@ -17,20 +17,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("All for EVENTS", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("ALL in ONE", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Events", "All", "Events")</li>
+                    <li>@Html.ActionLink("All Events", "All", "Events")</li>
 
-                    @if (User.IsInRole("Administrator") || User.IsInRole("Promoter"))
-                    {
-                        <li>@Html.ActionLink("Add event", "Create", "Events")</li>
-                        <li>@Html.ActionLink("My event", "MyEvent", "Events")</li>
-                    }
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    
+                    <li>@Html.ActionLink("About us", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact us", "Contact", "Home")</li>
                 </ul>
 
                 @Html.Partial("_LoginPartial")
@@ -42,7 +37,7 @@
     @RenderBody()
     <hr/>
     <footer>
-        <p>&copy; @DateTime.Now.Year - EVENTS all in ONE</p>
+        <p>&copy; @DateTime.Now.Year - ALL in ONE</p>
     </footer>
 </div>
 
