--- a/EventsApp/EventsApp/Views/Shared/_CategoriesForEventAll.cshtml
+++ b/EventsApp/EventsApp/Views/Shared/_CategoriesForEventAll.cshtml
@@ -4,5 +4,6 @@
     @foreach (var category in Model)
     {
         @Html.ActionLink(category.Name, "All", "Events", new { categoryName = category.Name},  new {@class = "list-group-item"})
-    } 
+    }
+    @Html.ActionLink("All Categories", "All", "Events", new { @class = "list-group-item" })
 </div>
