--- a/EventsApp/EventsApp/Areas/Event/Views/Create.cshtml
+++ b/EventsApp/EventsApp/Areas/Event/Views/Create.cshtml
@@ -8,40 +8,55 @@
         @Html.AntiForgeryToken()
         <h4>Add Event</h4>
         <hr />
-        <div class="form-horizontal col-md-offset-3 col-md-6">
-            
-            @Html.ValidationSummary(false, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.Label("Title")
-                <input type="text" name="Title" class="form-control"/>
-            </div>
+        <div class="well bs-component col-md-offset-3 col-md-5">
+            <div class="form-horizontal ">
 
-            <div class="form-group">
-                @Html.Label("Image")
-                @Html.Editor("Image", new { htmlAttributes = new { @class = "form-control" } })
-            </div>
+                <fieldset>
+                    <legend>Add new event</legend>
+                </fieldset>
 
-            <div class="form-group">
-                @Html.Label("Location")
-                @Html.Editor("Location", new {htmlAttributes = new {@class = "form-control"}})
-            </div>
+                @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.Label("Title", new { @class = "col-lg-2 control-label" })
+                    <div class="col-lg-10">
+                        <input type="text" name="Title" class="form-control" />
+                    </div>
+                </div>
 
-            <div class="form-group">
-                @Html.Label("Event description")
-                <br/>
-                @Html.TextArea("Description", new { rows=10, style = "width:100%" })
-            </div>
+                <div class="form-group">
+                    @Html.Label("Image", new { @class = "col-lg-2 control-label" })
+                    <div class="col-lg-10">
+                        @Html.Editor("Image", new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
+                </div>
 
-            <div class="form-group">
-                @Html.Label("YoutubeUrl")
-                @Html.Editor("YoutubeUrl", new { htmlAttributes = new { @class = "form-control" } })
-            </div>
-            <div class="form-group">
-                @Html.Action("CategoriesListForCreateEvent")
-            </div>
+                <div class="form-group">
+                    @Html.Label("Location", new { @class = "col-lg-2 control-label" })
+                    <div class="col-lg-10">
+                        @Html.Editor("Location", new {htmlAttributes = new {@class = "form-control"}})
+                    </div>
+                </div>
 
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-info" />
+                <div class="form-group">
+                    @Html.Label("Event description", new { @class = "col-lg-2 control-label" })
+                    <div class="col-lg-10">
+                        @Html.TextArea("Description", new { rows = 10, style = "width:100%" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.Label("YoutubeUrl", new { @class = "col-lg-2 control-label" })
+                    <div class="col-lg-10">
+                        @Html.Editor("YoutubeUrl", new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.Action("CategoriesListForCreateEvent")
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-info" />
+                </div>
             </div>
         </div>
     }
