--- a/EventsApp/EventsApp/Views/Shared/_Layout.cshtml
+++ b/EventsApp/EventsApp/Views/Shared/_Layout.cshtml
@@ -9,29 +9,24 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("ALL in ONE", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("All Events", "All", "Events")</li>
+        <div class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    @Html.ActionLink("ALL in ONE", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("All Events", "All", "Events")</li>
 
-                    
-                    <li>@Html.ActionLink("About us", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact us", "Contact", "Home")</li>
-                </ul>
 
-                @Html.Partial("_LoginPartial")
+                        <li>@Html.ActionLink("About us", "About", "Home")</li>
+                        <li>@Html.ActionLink("Contact us", "Contact", "Home")</li>
+                    </ul>
+
+                    @Html.Partial("_LoginPartial")
+                </div>
             </div>
         </div>
-    </div>
 <div class="container body-content">
     <div style="height: 60px"></div>
     @RenderBody()
@@ -41,8 +36,8 @@
     </footer>
 </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
+@RenderSection("scripts", required: false)
 </body>
 </html>
