--- a/EventsApp/EventsApp/Areas/Event/Views/Details.cshtml
+++ b/EventsApp/EventsApp/Areas/Event/Views/Details.cshtml
@@ -5,23 +5,77 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
 
-<div>
-    <h4>Event</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
+<div class="container body-content">
+    <div class="col-sm-6 col-lg-6 col-md-6">
+        <h3>Details</h3>
 
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
+        <div class="thumbnail">
+            <div>
+                <h4 class="pull-right">
+                    @Html.ActionLink(@Html.DisplayFor(model => model.Location).ToString(), "Location", "Events", new {id = Model.Location}, null)
+                </h4>
+            </div>
+            <div>
+                <img class="crop alignleft post-image" src="@Model.ImageUrl" alt="@Model.Id" />
+            </div>
+            <br />
+            <h6>@Model.StartDateTime</h6>
+            <div class="caption">
+                <div class="title">
+                    <h4>
+                        @Html.ActionLink(@Html.DisplayFor(model => model.Title).ToString(), "Details", "Events", new {id = Model.Id}, null)
+                    </h4>
+                </div>
+                <div class="truncate">
+                    <p>
+                        @Html.DisplayFor(model => model.Description)
+                    </p>
+                </div>
 
-    </dl>
+                @if (Request.IsAuthenticated && User.IsInRole("Visitor"))
+                {
+                    using (Html.BeginForm("All", "Events", FormMethod.Post))
+                    {
+                @Html.AntiForgeryToken()
+
+                @Html.ValidationSummary(false, "", new {@class = "text-danger"})
+                <div class="form-group">
+                    <input name="EventId" type="hidden" value="@Model.Id" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Join in" class="btn btn-info" />
+                </div>
+                    }
+                }
+            </div>
+            <div class="ratings">
+                <p class="pull-right">15 comments</p>
+                <p>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star glyphicon-star-empty"></span>
+                </p>
+            </div>
+        </div>
+        <div>
+            <iframe type="text/html" width="100%" height="385" src="http://www.youtube.com/embed/@Model.YouTubeUrl"></iframe>
+        </div>
+    </div>
+
+    <div class="col-sm-6 col-lg-6 col-md-6">
+        <h3>Comments</h3>
+        <div class="thumbnail">
+            <div>
+                @Html.Action("CommentListForDetailPage", "Events", new { eventId = @Model.Id })
+            </div>
+        </div>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+    @*<p>
+            @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+            @Html.ActionLink("Back to List", "Index")
+        </p>*@
