--- a/EventsApp/EventsApp/Areas/Event/Views/Details.cshtml
+++ b/EventsApp/EventsApp/Areas/Event/Views/Details.cshtml
@@ -67,10 +67,8 @@
 
     <div class="col-sm-6 col-lg-6 col-md-6">
         <h3>Comments</h3>
-        <div class="thumbnail">
-            <div>
+        <div class="">
                 @Html.Action("CommentListForDetailPage", "Events", new { eventId = @Model.Id })
-            </div>
         </div>
     </div>
 </div>
