--- a/EventsApp/EventsApp/Areas/Event/Views/Details.cshtml
+++ b/EventsApp/EventsApp/Areas/Event/Views/Details.cshtml
@@ -9,6 +9,10 @@
 <div class="container body-content">
     <div class="col-sm-6 col-lg-6 col-md-6">
         <h3>Details</h3>
+        @if (User.IsInRole("Admin"))
+        {
+            <h3>Delete event</h3>
+        }
 
         <div class="thumbnail">
             <div>
@@ -50,7 +54,7 @@
                 }
             </div>
             <div class="ratings">
-                <p class="pull-right">15 comments</p>
+                <p class="pull-right">@Model.CommentsCounter coments</p>
                 <p>
                     <span class="glyphicon glyphicon-star"></span>
                     <span class="glyphicon glyphicon-star"></span>
