--- a/EventsApp/EventsApp/Views/Shared/_LoginPartial.cshtml
+++ b/EventsApp/EventsApp/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,17 @@
 ﻿@using Microsoft.AspNet.Identity
+@{ string role = ""; };
+@if (User.IsInRole("Admin"))
+            {
+                role = "Administrator";
+            }
+            else if (@User.IsInRole("Promoter"))
+            {
+                role = "Promoter";
+            }
+            else if (@User.IsInRole("Visitor"))
+            {
+                role = "Visitor";
+            }
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
@@ -6,7 +19,7 @@
         @Html.AntiForgeryToken()
 
         <ul class="nav navbar-nav navbar-right">
-
+            
             @if (User.IsInRole("Administrator") || User.IsInRole("Promoter"))
             {
                 <li>@Html.ActionLink("Add event", "Create", "Events")</li>
@@ -19,7 +32,7 @@
             }
 
             <li>
-                @Html.ActionLink("I am " + User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+                @Html.ActionLink(User.Identity.GetUserName() +" : " + role, "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
             </li>
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
         </ul>
