Remove promoterinfo entity, fix some problem with mapping, fix cshtmls

--- a/EventsApp/EventsApp/Views/Promoters/Details.cshtml
+++ b/EventsApp/EventsApp/Views/Promoters/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model EventsApp.Models.ViewModels.Promoter.PromoterAllInfoVm
+﻿@model EventsApp.Models.ViewModels.Promoter.PromoterDetailsInfoVm
 
 @{
     ViewBag.Title = "Details";
