--- a/EventsApp/EventsApp/Areas/Event/Views/Details.cshtml
+++ b/EventsApp/EventsApp/Areas/Event/Views/Details.cshtml
@@ -1,36 +1,80 @@
-﻿@model EventsApp.Models.ViewModels.Event.EventVm
+﻿@using Microsoft.AspNet.Identity
+@model EventsApp.Models.ViewModels.Event.EventDetailsVm
 @{ Layout = "~/Views/Shared/_Layout.cshtml"; }
-
+@{ var loggerdUserId = System.Web.HttpContext.Current.User.Identity.GetUserId(); }
 @{
     ViewBag.Title = "Details";
 }
 
 
 <div class="container body-content">
-    <div class="col-sm-6 col-lg-6 col-md-6">
-        <h3>Details</h3>
-        @if (User.IsInRole("Admin"))
-        {
-            <h3>Delete event</h3>
-        }
-
+    <div class="col-sm-12 col-md-12 col-lg-12">
+        <div class="title">
+            <h4 class="title">
+                @Html.DisplayFor(model => model.Title)
+            </h4>
+            @if (User.IsInRole("Admin") || loggerdUserId == @Model.Owner.User.Id)
+            {
+                using (Html.BeginForm())
+                {
+                    <div class="form-group">
+                        <input type="submit" value="Delete" class="btn btn-danger" onclick="return confirm('Are you sure you wish to delete this event?');" />
+                    </div>
+                }
+            }
+        </div>
         <div class="thumbnail">
-            <div>
-                <h4 class="pull-right">
-                    @Html.ActionLink(@Html.DisplayFor(model => model.Location).ToString(), "Location", "Events", new {id = Model.Location}, null)
-                </h4>
-            </div>
-            <div>
-                <img class="crop alignleft post-image" src="@Model.ImageUrl" alt="@Model.Id" />
-            </div>
-            <br />
-            <h6>@Model.StartDateTime</h6>
-            <div class="caption">
-                <div class="title">
-                    <h4>
-                        @Html.ActionLink(@Html.DisplayFor(model => model.Title).ToString(), "Details", "Events", new {id = Model.Id}, null)
-                    </h4>
+
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <div class="col-sm-4 col-md-4 col-lg-4">
+                    <iframe src="http://www.youtube.com/embed/@Model.YouTubeUrl" scrolling="no" frameborder="0" style="position: relative; height: 100%; width: 100%;"></iframe>
                 </div>
+                <div class="col-sm-4 col-md-4 col-lg-4">
+                    <img class="crop alignleft post-image" src="@Model.ImageUrl" alt="@Model.Id" />
+                </div>
+
+                <div class="col-sm-4 col-md-4 col-lg-4">
+                    <div>
+                        <h4>
+                            <span style="color: orange;"><strong>START AT: </strong></span> @Model.StartDateTime
+                        </h4>
+                    </div>
+                    <div>
+                        <h4>
+                            <span style="color: orange;"><strong>LOCATION: </strong></span> @Html.ActionLink(@Html.DisplayFor(model => model.Location).ToString(), "Location", "Events", new { id = Model.Location }, null)
+                        </h4>
+                    </div>
+                    <div>
+                        <h4>
+                            <span style="color: orange;"><strong>ADDRESS: </strong></span> ========
+                        </h4>
+                    </div>
+                </div>
+            </div>
+            <div style="height: 15px; border-bottom: 1px solid orange" class="col-sm-12 col-md-12 col-lg-12"></div>
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <div>
+                    <h4>
+                        <span style="color: orange;"><strong>Details about event: </strong></span>
+                    </h4>
+                    <p>
+                        @Html.DisplayFor(model => model.Description)
+                    </p>
+                </div>
+                <div style="height: 15px; border-bottom: 1px solid orange" class="col-sm-12 col-md-12 col-lg-12"></div>
+                <div >
+                    <h4>
+                        <span style="color: orange;"><strong>Details about promoter: </strong></span>                         @Html.ActionLink(@Html.DisplayFor(model => model.Owner.Name).ToString(), "Details", "Promoters", new { id = Model.Owner.Id }, null)
+
+                    </h4>
+                    <p>
+                        @Html.DisplayFor(model => model.Owner.Description)
+                    </p>
+                </div>
+            </div>
+
+            <div class="caption">
+
                 <div class="truncate">
                     <p>
                         @Html.DisplayFor(model => model.Description)
@@ -41,15 +85,15 @@
                 {
                     using (Html.BeginForm("All", "Events", FormMethod.Post))
                     {
-                @Html.AntiForgeryToken()
+                        @Html.AntiForgeryToken()
 
-                @Html.ValidationSummary(false, "", new {@class = "text-danger"})
-                <div class="form-group">
-                    <input name="EventId" type="hidden" value="@Model.Id" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Join in" class="btn btn-info" />
-                </div>
+                        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            <input name="EventId" type="hidden" value="@Model.Id" class="form-control" />
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Join in" class="btn btn-info" />
+                        </div>
                     }
                 }
             </div>
@@ -64,20 +108,40 @@
                 </p>
             </div>
         </div>
-        <div>
-            <iframe type="text/html" width="100%" height="385" src="http://www.youtube.com/embed/@Model.YouTubeUrl"></iframe>
-        </div>
+
     </div>
 
-    <div class="col-sm-6 col-lg-6 col-md-6">
-        <h3>Comments</h3>
-        <div class="">
+    @*<div>
+            <h3>Comments</h3>
+            <div class="">
                 @Html.Action("CommentListForDetailPage", "Events", new { eventId = @Model.Id })
-        </div>
-    </div>
+
+
+                <div>
+                    @using (Html.BeginForm($"Comment/{@ViewBag.Eventid}", "Events"))
+                    {
+                        <div class="col-sm-6 col-lg-6 col-md-6">
+                            @Html.TextArea("Content", new { rows = 10, columns = 40, @class = "" })
+                        </div>
+
+
+                        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.Editor("Title", new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessage("Title")
+                        </div>
+
+                        <div class="form-group">
+                            <input type="submit" value="Submit" class="btn btn-danger" />
+                        </div>
+                    }
+
+                </div>
+            </div>
+        </div>*@
 </div>
 
-    @*<p>
-            @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-            @Html.ActionLink("Back to List", "Index")
-        </p>*@
+@*<p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>*@
