--- a/EventsApp/EventsApp/Views/Promoters/All.cshtml
+++ b/EventsApp/EventsApp/Views/Promoters/All.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EventsApp.Models.EntityModels.Promoter>
+﻿@model IEnumerable<EventsApp.Models.ViewModels.Promoter.PromoterInfoVm>
 
 @{
     ViewBag.Title = "Index";
@@ -6,26 +6,35 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Info.Name)
+            @Html.DisplayNameFor(model => model.Name)
         </th>
-        <th></th>
+        <th>
+            @Html.DisplayNameFor(model => model.Contacts)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Description)
+        </th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Info.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Contacts)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+            </td>
+        </tr>
+    }
 
 </table>
