--- a/EventsApp/EventsApp/Views/Shared/_EventAllPartial.cshtml
+++ b/EventsApp/EventsApp/Views/Shared/_EventAllPartial.cshtml
@@ -9,7 +9,7 @@
     <div class="thumbnail">
         <div>
             <h4 class="pull-right">
-                @Html.ActionLink(@Html.DisplayFor(model => model.Location).ToString(), "Location", "Events", new { id = Model.Location }, null)
+                @Html.ActionLink(@Html.DisplayFor(model => model.Location).ToString(), "Location", "Events", new { name = Model.Location }, null)
             </h4>
         </div>
         <div>
