--- a/EventsApp/EventsApp/Areas/Event/Views/Create.cshtml
+++ b/EventsApp/EventsApp/Areas/Event/Views/Create.cshtml
@@ -34,9 +34,16 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Location, new { @class = "col-lg-3 control-label" })
+                    @Html.LabelFor(m => m.Location, new {@class = "col-lg-3 control-label"})
                     <div class="col-lg-9">
-                        @Html.EditorFor(m => m.Location, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(m => m.Location, new {htmlAttributes = new {@class = "form-control"}})
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Address, new { @class = "col-lg-3 control-label" })
+                    <div class="col-lg-9">
+                        @Html.EditorFor(m => m.Address, new { htmlAttributes = new { @class = "form-control" } })
                     </div>
                 </div>
 
