--- a/EventsApp/EventsApp/Views/Promoters/Details.cshtml
+++ b/EventsApp/EventsApp/Views/Promoters/Details.cshtml
@@ -4,22 +4,18 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
-<h4>@Html.DisplayFor(model => model.Info.Name)</h4>
-<hr />
-
-<table>
-    <tr>
-        <th>@Html.DisplayNameFor(model => model.Info.Contacts):
-        @Html.DisplayFor(model => model.Info.Contacts)</th>
-    </tr>
-    <tr>
-        <td>
-            @Html.DisplayFor(model => model.Info.Description)
-        </td>
-    </tr>
-</table>
-<hr />
+<h2 class="title-orange">@Html.DisplayFor(model => model.Info.Name)</h2>
+<div style="height: 15px; border-top: 1px solid orange" class="col-sm-12 col-md-12 col-lg-12"></div>
+<div>
+    <p>
+        <span style="color: orange;"><strong>Contacts: </strong></span> @Html.DisplayNameFor(model => model.Info.Contacts):
+        @Html.DisplayFor(model => model.Info.Contacts)
+    </p>
+    <p style="border-top: 1px solid orange">
+        <span style="color: orange;"><strong>Details about promoter: </strong></span>@Html.DisplayFor(model => model.Info.Description)
+    </p>
+</div>
+<div style="height: 15px; border-bottom: 1px solid orange" class="col-sm-12 col-md-12 col-lg-12"></div>
 @Html.Action("EventList", "Promoters", new { eventBriefVms = @Model.Events })
 
 
