--- a/EventsApp/EventsApp/Views/Promoters/EditProfile.cshtml
+++ b/EventsApp/EventsApp/Views/Promoters/EditProfile.cshtml
@@ -37,7 +37,7 @@
         <div class="form-group">
             @Html.Label("Contacts", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Contacts, new { @class = "form-control", name = "Contacts" })
+                @Html.TextAreaFor(model => model.Contacts, new { @class = "form-control", name = "Contacts" })
                 @Html.ValidationMessage("Contacts", "", new { @class = "text-danger" })
             </div>
         </div>
