--- a/EventsApp/EventsApp/Views/Shared/_DisplayEventBriefVmForPromoterProfile.cshtml
+++ b/EventsApp/EventsApp/Views/Shared/_DisplayEventBriefVmForPromoterProfile.cshtml
@@ -1,5 +1,4 @@
-﻿@using EventsApp.CustomHelpers
-@model IEnumerable<EventsApp.Models.ViewModels.Event.EventBriefVm>
+﻿@model IEnumerable<EventsApp.Models.ViewModels.Event.EventBriefVm>
 
 @{
     ViewBag.Title = "_DisplayEventBriefVm";
