--- a/EventsApp/EventsApp/Views/Shared/_EventAllPartial.cshtml
+++ b/EventsApp/EventsApp/Views/Shared/_EventAllPartial.cshtml
@@ -5,28 +5,28 @@
 }
 
 <div class="col-sm-4 col-lg-4 col-md-4">
-    
+
     <div class="thumbnail">
         <div>
             <h4 class="pull-right">
-                @Html.ActionLink(@Html.DisplayFor(model => model.Location).ToString(), "Location", "Events", new { name = Model.Location }, null)
+                @Html.ActionLink(@Html.DisplayFor(model => model.Location).ToString(), "Location", "Events", new {name = Model.Location}, null)
             </h4>
         </div>
         <div>
-            <img class="crop alignleft post-image" src="@Model.ImageUrl" alt="@Model.Id" />
+            <img class="crop alignleft post-image" src="@Model.ImageUrl" alt="@Model.Id"/>
         </div>
-        <br />
+        <br/>
         @Html.DisplayNameFor(x => x.StartDateTime)
         @Html.DisplayFor(x => x.StartDateTime)
         <div class="caption">
             <div class="title">
                 <h4>
-                    @Html.ActionLink(@Html.DisplayFor(model => model.Title).ToString(), "Details", "Events", new { id = Model.Id }, null)
+                    @Html.ActionLink(@Html.DisplayFor(model => model.Title).ToString(), "Details", "Events", new {id = Model.Id}, null)
                 </h4>
             </div>
             <div class="truncate">
                 <p>
-                    @Html.DisplayFor(model=>model.Description)
+                    @Html.DisplayFor(model => model.Description)
                 </p>
             </div>
             @if (Request.IsAuthenticated && User.IsInRole("Visitor"))
@@ -35,25 +35,46 @@
                 {
                     @Html.AntiForgeryToken()
 
+                    @Html.ValidationSummary(false, "", new {@class = "text-danger"})
+                    <div class="form-group">
+                        <input name="EventId" type="hidden" value="@Model.Id" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Join in" class="btn btn-info"/>
+                    </div>
+                }
+
+                using (Html.BeginForm("Vote", "Events", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
+
                     @Html.ValidationSummary(false, "", new { @class = "text-danger" })
                     <div class="form-group">
                         <input name="EventId" type="hidden" value="@Model.Id" class="form-control" />
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Join in" class="btn btn-info" />
+                        <input type="submit" value="Vote up" class="btn btn-info" />
                     </div>
                 }
             }
         </div>
         <div class="ratings">
-            <p class="pull-right">15 reviews</p>
+            <p class="pull-right">@Model.CommentsCounter comments</p>
             <p>
-                <span class="glyphicon glyphicon-star"></span>
-                <span class="glyphicon glyphicon-star"></span>
-                <span class="glyphicon glyphicon-star"></span>
-                <span class="glyphicon glyphicon-star"></span>
-                <span class="glyphicon glyphicon-star"></span>
+                @for (int i = 0; i < 5; i++)
+                {
+                    if (i <= (@Model.Rating/@ViewBag.Rating))
+                    {
+                        <span class="glyphicon glyphicon-star"></span>
+                    }
+                    else
+                    {
+                        <span class="glyphicon glyphicon-star-empty"></span>
+                    }
+                }
+
             </p>
+            
         </div>
     </div>
 </div>
